@@ -1,6 +1,8 @@
 2013-XX-XX   2.0.1:
 -------------------
   * add --no-prompt option to conda skeleton pypi
+  * add create_default_packages to condarc (and --no-default-packages option
+    to create command)
 
 
 2013-10-01   2.0.0:
